--- a/Bilverkstad/Presentationslager.csproj
+++ b/Bilverkstad/Presentationslager.csproj
@@ -59,19 +59,19 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="PresentationLager - Vyer\BokningVy.xaml">
+    <Page Include="Presentationlager\BokningVy.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="PresentationLager - Vyer\KundVy.xaml">
+    <Page Include="Presentationlager\KundVy.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="PresentationLager - Vyer\Login.xaml">
+    <Page Include="Presentationlager\Login.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="PresentationLager - Vyer\MainWindow.xaml">
+    <Page Include="Presentationlager\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -79,33 +79,33 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="PresentationLager - Vyer\BokningVy.xaml.cs">
+    <Compile Include="Presentationlager\BokningVy.xaml.cs">
       <DependentUpon>BokningVy.xaml</DependentUpon>
     </Compile>
-    <Compile Include="PresentationLager - Vyer\KundVy.xaml.cs">
+    <Compile Include="Presentationlager\KundVy.xaml.cs">
       <DependentUpon>KundVy.xaml</DependentUpon>
     </Compile>
-    <Compile Include="PresentationLager - Vyer\Login.xaml.cs">
+    <Compile Include="Presentationlager\Login.xaml.cs">
       <DependentUpon>Login.xaml</DependentUpon>
     </Compile>
-    <Compile Include="PresentationLager - Vyer\MainWindow.xaml.cs">
+    <Compile Include="Presentationlager\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="PresentationLager - Vyer\Menu.xaml">
+    <Page Include="Presentationlager\Menu.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="PresentationLager - Vyer\ReservDelVy.xaml">
+    <Page Include="Presentationlager\ReservDelVy.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PresentationLager - Vyer\Menu.xaml.cs">
+    <Compile Include="Presentationlager\Menu.xaml.cs">
       <DependentUpon>Menu.xaml</DependentUpon>
     </Compile>
-    <Compile Include="PresentationLager - Vyer\ReservDelVy.xaml.cs">
+    <Compile Include="Presentationlager\ReservDelVy.xaml.cs">
       <DependentUpon>ReservDelVy.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -134,8 +134,22 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="logo logo.png" />
+    <Resource Include="Bilder\logo logo.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Bilder\background_bilverkstad.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Bilder\bild_back_1.png" />
+    <Resource Include="Bilder\bokning_icon1.png" />
+    <Resource Include="Bilder\car_car-1.png" />
+    <Resource Include="Bilder\kund_icon11.png" />
+    <Resource Include="Bilder\reservdel_icon1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Bilder\121212-rem.png" />
+    <Resource Include="Bilder\icon_icon_user2.png" />
+    <Resource Include="Bilder\key_icon.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
