--- a/Bilverkstad1/Bilverkstad1.csproj
+++ b/Bilverkstad1/Bilverkstad1.csproj
@@ -29,6 +29,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.77" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Affärslager\Affärslager.csproj" />
   </ItemGroup>
 
